Разработана html-структура внутренней страницы

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <main>
+    <div class="container">
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
@@ -19,6 +19,7 @@
         </ul>
       </nav>
     </header>
+    <main>
       <section class="banner">
         <img src="img/welcometosedona.svg" width="100" height="50" alt="Добро пожаловать в Седона">
       </section>
@@ -85,7 +86,7 @@
           <h2>Заинтересовались?</h2>
           <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
         </div>
-        <a href="#">Поиск гостиницы в седоне</button>
+        <a href="#">Поиск гостиницы в седоне</a>
       </section>
       <div class="map"><!-- Здесь будет форма -->
       </div>
@@ -94,9 +95,9 @@
         <span class="tag">#visitsedona</span>
         <div class="footer-social">
           <ul>
-            <li><a class="social-button" href="#">Твиттер</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Ютуб</a></li>
+            <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span></a></li>
+            <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+            <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span></a></li>
           </ul>
         </div>
         <p class="copyright"> Website.by
@@ -105,5 +106,6 @@
           </a>
         </p>
       </footer>
+    </div>
   </body>
 </html>
