--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <div class="container">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <a class="main-header-logo" href="index.html">
           <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
         </a>
         <ul class="site-navigation">
@@ -23,7 +23,7 @@
       <section class="filter">
         <!-- Здесь будет форма -->
       </section>
-      <div>
+      <div class="research-hotels">
         <span class="number">Найдено: 3</span>
         <p class="sorting">Сортировка</p>
         <a class="sorting-item" href="#">По цене</a>
@@ -37,59 +37,71 @@
       <section class="hotels-list">
         <ul class="hotels-item">
           <li>
-            <h3>Amara Resort & Spa</h3>
-            <img src="img/amara.jpg" width="60" height="50" alt="Amara Resort & Spa" class="hotels-img">
+            <h3><a href="#">Amara Resort & Spa</a></h3>
+            <div class="hotels-img">
+              <img src="img/amara.jpg" width="60" height="50" alt="Amara Resort & Spa">
+            </div>
             <span>Гостиница</span>
             <span>от 4000 р.</span>
             <a href="#">Подробнее</a>
             <a href="#">Забронировать</a>
-            <div class="stars"></div>
-            <div class="rating">
-              <span class="rating-item">Рейтинг: 8,5</span>
+            <div class="reviews">
+              <div class="stars"></div>
+              <div class="rating">
+                <span class="rating-item">Рейтинг: 8,5</span>
+              </div>
             </div>
           </li>
           <li>
-            <h3>Desert Quail Inn</h3>
-            <img src="img/desert.jpg" width="60" height="50" alt="Desert Quail Inn" class="hotels-img">
+            <h3><a href="#">Desert Quail Inn</a></h3>
+            <div class="hotels-img">
+              <img src="img/desert.jpg" width="60" height="50" alt="Desert Quail Inn">
+            </div>
             <span>Мотель</span>
             <span>от 3000 р.</span>
             <a href="#">Подробнее</a>
             <a href="#">Забронировать</a>
-            <div class="stars"></div>
-            <div class="rating">
-              <span class="rating-item">Рейтинг: 8,9</span>
+            <div class="reviews">
+              <div class="stars"></div>
+              <div class="rating">
+                <span class="rating-item">Рейтинг: 8,9</span>
+              </div>
             </div>
           </li>
           <li>
-            <h3>Villas at Poco Diablo</h3>
-            <img src="img/villas.jpg" width="60" height="50" alt="Villas at Poco Diablo" class="hotels-img">
+            <h3><a href="#">Villas at Poco Diablo</a></h3>
+            <div class="hotels-img">
+              <img src="img/villas.jpg" width="60" height="50" alt="Villas at Poco Diablo">
+            </div>
             <span>Апартаменты</span>
             <span>от 2000 р.</span>
             <a href="#">Подробнее</a>
             <a href="#">Забронировать</a>
-            <div class="stars"></div>
-            <div class="rating">
-              <span class="rating-item">Рейтинг: 9,2</span>
+            <div class="reviews">
+              <div class="stars"></div>
+              <div class="rating">
+                <span class="rating-item">Рейтинг: 9,2</span>
+              </div>
             </div>
           </li>
         </ul>
       </section>
     </main>
-      <footer class="main-footer">
-        <span class="tag">#visitsedona</span>
-        <div class="footer-social">
-          <ul>
-            <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span></a></li>
-            <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-            <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span></a></li>
-          </ul>
-        </div>
-        <p class="copyright"> Website.by
-          <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo.jpg" width="30" height="30" alt="HTML Academy">
-          </a>
-        </p>
-      </footer>
+    <footer class="main-footer">
+      <span class="tag">#visitsedona</span>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span></a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span></a></li>
+        </ul>
+      </div>
+      <p class="copyright"> Website.by
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo.jpg" width="30" height="30" alt="HTML Academy">
+        </a>
+      </p>
+    </footer>
     </div>
   </body>
 </html>
