--- a/catalog.html
+++ b/catalog.html
@@ -6,102 +6,100 @@
   </head>
   <body>
     <div class="container">
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
-          <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
-        </a>
-        <ul class="site-navigation">
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="card.html">Фото и видео</a></li>
-          <li><a href="map.html">Карта штата</a></li>
-          <li><a href="hotels.html">Гостиницы</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="filter">
-        <!-- Здесь будет форма -->
-      </section>
-      <div class="research-hotels">
-        <span class="number">Найдено: 3</span>
-        <p class="sorting">Сортировка</p>
-        <a class="sorting-item" href="#">По цене</a>
-        <a class="sorting-item" href="#">По типу</a>
-        <a class="sorting-item" href="#">По рейтингу</a>
-        <div class="updown">
-          <a href="#"><span class="visually-hidden">По возрастанию</span></a>
-          <a href="#"><span class="visually-hidden">По убыванию</span></a>
+      <header class="main-header">
+        <nav class="main-navigation">
+          <a class="main-header-logo" href="index.html">
+            <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
+          </a>
+          <ul class="site-navigation">
+            <li><a href="info.html">Информация</a></li>
+            <li><a href="card.html">Фото и видео</a></li>
+            <li><a href="map.html">Карта штата</a></li>
+            <li><a href="hotels.html">Гостиницы</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <section class="filter">
+          <!-- Здесь будет форма -->
+        </section>
+        <div class="hotels-sort">
+          <span class="number">Найдено: 3</span>
+          <p class="sorting">Сортировка</p>
+          <a class="sorting-item" href="#">По цене</a>
+          <a class="sorting-item" href="#">По типу</a>
+          <a class="sorting-item" href="#">По рейтингу</a>
+          <div class="updown">
+            <a href="#"><span class="visually-hidden">По возрастанию</span></a>
+            <a href="#"><span class="visually-hidden">По убыванию</span></a>
+          </div>
         </div>
-      </div>
-      <section class="hotels-list">
-        <ul class="hotels-item">
-          <li>
-            <h3><a href="#">Amara Resort & Spa</a></h3>
-            <div class="hotels-img">
-              <img src="img/amara.jpg" width="60" height="50" alt="Amara Resort & Spa">
-            </div>
-            <span>Гостиница</span>
-            <span>от 4000 р.</span>
-            <a href="#">Подробнее</a>
-            <a href="#">Забронировать</a>
-            <div class="reviews">
-              <div class="stars"></div>
-              <div class="rating">
+        <section class="hotels-list">
+          <ul class="hotels-item">
+            <li>
+              <h3><a href="#">Amara Resort & Spa</a></h3>
+              <div class="hotels-img">
+                <img src="img/amara.jpg" width="60" height="50" alt="Amara Resort & Spa">
+              </div>
+              <span>Гостиница</span>
+              <span>от 4000 р.</span>
+              <a href="#">Подробнее</a>
+              <a href="#">Забронировать</a>
+              <div class="reviews">
+                <div class="stars"></div>
                 <span class="rating-item">Рейтинг: 8,5</span>
               </div>
-            </div>
-          </li>
-          <li>
-            <h3><a href="#">Desert Quail Inn</a></h3>
-            <div class="hotels-img">
-              <img src="img/desert.jpg" width="60" height="50" alt="Desert Quail Inn">
-            </div>
-            <span>Мотель</span>
-            <span>от 3000 р.</span>
-            <a href="#">Подробнее</a>
-            <a href="#">Забронировать</a>
-            <div class="reviews">
-              <div class="stars"></div>
-              <div class="rating">
-                <span class="rating-item">Рейтинг: 8,9</span>
+            </li>
+            <li>
+              <h3><a href="#">Desert Quail Inn</a></h3>
+              <div class="hotels-img">
+                <img src="img/desert.jpg" width="60" height="50" alt="Desert Quail Inn">
               </div>
-            </div>
-          </li>
-          <li>
-            <h3><a href="#">Villas at Poco Diablo</a></h3>
-            <div class="hotels-img">
-              <img src="img/villas.jpg" width="60" height="50" alt="Villas at Poco Diablo">
-            </div>
-            <span>Апартаменты</span>
-            <span>от 2000 р.</span>
-            <a href="#">Подробнее</a>
-            <a href="#">Забронировать</a>
-            <div class="reviews">
-              <div class="stars"></div>
-              <div class="rating">
-                <span class="rating-item">Рейтинг: 9,2</span>
+              <span>Мотель</span>
+              <span>от 3000 р.</span>
+              <a href="#">Подробнее</a>
+              <a href="#">Забронировать</a>
+              <div class="reviews">
+                <div class="stars"></div>
+                <div class="rating">
+                  <span class="rating-item">Рейтинг: 8,9</span>
+                </div>
               </div>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="main-footer">
-      <span class="tag">#visitsedona</span>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span></a></li>
-          <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-          <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span></a></li>
-        </ul>
-      </div>
-      <p class="copyright"> Website.by
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo.jpg" width="30" height="30" alt="HTML Academy">
-        </a>
-      </p>
-    </footer>
+            </li>
+            <li>
+              <h3><a href="#">Villas at Poco Diablo</a></h3>
+              <div class="hotels-img">
+                <img src="img/villas.jpg" width="60" height="50" alt="Villas at Poco Diablo">
+              </div>
+              <span>Апартаменты</span>
+              <span>от 2000 р.</span>
+              <a href="#">Подробнее</a>
+              <a href="#">Забронировать</a>
+              <div class="reviews">
+                <div class="stars"></div>
+                <div class="rating">
+                  <span class="rating-item">Рейтинг: 9,2</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="main-footer">
+        <span class="tag">#visitsedona</span>
+        <div class="footer-social">
+          <ul>
+            <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span></a></li>
+            <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+            <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span></a></li>
+          </ul>
+        </div>
+        <p class="copyright"> Website.by
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo.jpg" width="30" height="30" alt="HTML Academy">
+          </a>
+        </p>
+      </footer>
     </div>
   </body>
 </html>
