Подготовлена графика личного проекта

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header class="main-header">
         <nav class="main-navigation">
           <a class="main-header-logo">
-            <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
+            <img src="img/content/logo.svg" width="100" height="50" alt="Логотип Седона">
           </a>
           <ul class="site-navigation">
             <li><a href="info.html">Информация</a></li>
@@ -21,7 +21,7 @@
     </header>
     <main>
       <section class="banner">
-        <img src="img/welcometosedona.svg" width="100" height="50" alt="Добро пожаловать в Седона">
+        <img src="img/content/welcome.svg" width="100" height="50" alt="Добро пожаловать в Седона">
       </section>
       <section class="advantages">
         <div class="advantages-intro">
@@ -37,7 +37,7 @@
               <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div class="advantages-photo">
-              <img src=img/city.jpg width="100" height="50" alt="Город Седона" class="advantages-img">
+              <img src=img/content/city1.jpg width="100" height="50" alt="Город Седона" class="advantages-img">
             </div>
             <ul class="features-list">
               <li class="features-item">
@@ -56,7 +56,7 @@
           </li>
             <li class="advantages-item advantages-item-right">
               <div class="advantages-photo">
-                <img src=img/city.jpg width="100" height="50" alt="Город Седона" class="advantages-img">
+                <img src=img/content/city2.jpg width="100" height="50" alt="Город Седона" class="advantages-img">
               </div>
               <div class="advantages-text">
                 <h3>Там есть мост дьявола</h3>
@@ -102,7 +102,7 @@
       </div>
       <p class="copyright"> Website.by
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo.jpg" width="30" height="30" alt="HTML Academy">
+          <img src="img/content/logo_html.svg" width="30" height="30" alt="HTML Academy">
         </a>
       </p>
     </footer>
