--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
       <header class="main-header">
         <nav class="main-navigation">
           <a class="main-header-logo" href="index.html">
-            <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
+            <img src="img/content/logo.svg" width="100" height="50" alt="Логотип Седона">
           </a>
           <ul class="site-navigation">
             <li><a href="info.html">Информация</a></li>
@@ -72,7 +72,7 @@
             <li>
               <h3><a href="#">Amara Resort & Spa</a></h3>
               <div class="hotels-img">
-                <img src="img/amara.jpg" width="60" height="50" alt="Amara Resort & Spa">
+                <img src="img/content/amara.jpg" width="60" height="50" alt="Amara Resort & Spa">
               </div>
               <span>Гостиница</span>
               <span>от 4000 р.</span>
@@ -86,7 +86,7 @@
             <li>
               <h3><a href="#">Desert Quail Inn</a></h3>
               <div class="hotels-img">
-                <img src="img/desert.jpg" width="60" height="50" alt="Desert Quail Inn">
+                <img src="img/content/desert.jpg" width="60" height="50" alt="Desert Quail Inn">
               </div>
               <span>Мотель</span>
               <span>от 3000 р.</span>
@@ -102,7 +102,7 @@
             <li>
               <h3><a href="#">Villas at Poco Diablo</a></h3>
               <div class="hotels-img">
-                <img src="img/villas.jpg" width="60" height="50" alt="Villas at Poco Diablo">
+                <img src="img/content/villas.jpg" width="60" height="50" alt="Villas at Poco Diablo">
               </div>
               <span>Апартаменты</span>
               <span>от 2000 р.</span>
@@ -129,7 +129,7 @@
         </div>
         <p class="copyright"> Website.by
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/logo.jpg" width="30" height="30" alt="HTML Academy">
+            <img src="img/content/logo_html.svg" width="30" height="30" alt="HTML Academy">
           </a>
         </p>
       </footer>
