Подключение контентных изображений в разметке

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header class="main-header">
         <nav class="main-navigation">
           <a class="main-header-logo">
-            <img src="img/content/logo.svg" width="100" height="50" alt="Логотип Седона">
+            <img src="img/content/logo_sedona.svg" width="100" height="50" alt="Логотип Седона">
           </a>
           <ul class="site-navigation">
             <li><a href="info.html">Информация</a></li>
