Добавление формы поиска гостиницы index.html
9. Основное задание: продолжаем разметку личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -15,13 +15,13 @@
             <li><a href="info.html">Информация</a></li>
             <li><a href="card.html">Фото и видео</a></li>
             <li><a href="map.html">Карта штата</a></li>
-            <li><a href="hotels.html">Гостиницы</a></li>
+            <li><a href="catalog.html">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
       <main>
         <section class="filter">
-          <form action="#" method="post">
+          <form action="#" method="get">
             <fieldset>
               <legend class="filter-list">Инфраструктура</legend>
               <p class="filter-checkbox">
