--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="info.html">Информация</a></li>
             <li><a href="card.html">Фото и видео</a></li>
             <li><a href="map.html">Карта штата</a></li>
-            <li><a href="hotels.html">Гостиницы</a></li>
+            <li><a href="catalog.html">Гостиницы</a></li>
           </ul>
        </nav>
     </header>
@@ -86,9 +86,36 @@
           <h2>Заинтересовались?</h2>
           <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
         </div>
-        <a href="#">Поиск гостиницы в седоне</a>
+        <a href="#">Поиск гостиницы в Седоне</a>
       </section>
-      <div class="map"><!-- Здесь будет форма -->
+      <div class="map">
+        <form class="popup" action="#" method="get">
+          <div class="popup-item">
+            <label for="check-in">Дата заезда</label>
+            <input type="text" name="check-in" id="check-in" value="24 апреля 2017">
+            <button class="calendar"></button>
+          </div>
+          <div class="popup-item">
+            <label for="check-out">Дата выезда</label>
+            <input type="text" name="check-out" id="check-out" value="4 июля 2017">
+            <button class="calendar"></button>
+          </div>
+          <div class="popup-item-count">
+            <div class="popup-item-count-adult">
+              <label for="adult">Взрослые</label>
+              <button class="minus">-</button>
+              <input type="text" name="adult" id="adult" value="2">
+              <button class="plus">+</button>
+            </div>
+            <div class="popup-item-count-child">
+              <label for="child">Дети</label>
+              <button class="minus">-</button>
+              <input type="text" name="child" id="child" value="0">
+              <button class="plus">+</button>
+            </div>
+          </div>
+          <button type="submit" class="popup-search">Найти</button>
+        </form>
       </div>
     </main>
     <footer class="main-footer">
