Стилизация главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -131,10 +134,10 @@
       <footer class="main-footer">
         <span class="tag">#visitsedona</span>
         <div class="footer-social">
-          <ul>
-            <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span></a></li>
-            <li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
-            <li><a class="social-button" href="#"><span class="visually-hidden">Ютуб</span></a></li>
+          <ul class="social-button">
+            <li><a class="social-button-twitter" href="#"><span class="visually-hidden">Твиттер</span></a></li>
+            <li><a class="social-button-facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+            <li><a class="social-button-youtube" href="#"><span class="visually-hidden">Ютуб</span></a></li>
           </ul>
         </div>
         <p class="copyright"> Website.by
