--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <img src="img/logo_sedona.svg" width="140" height="72" alt="Логотип Седона">
           </a>
           <ul class="site-navigation">
-            <li><a href="info.html">Информация</a></li>
-            <li><a href="card.html">Фото и видео</a></li>
-            <li><a href="map.html">Карта штата</a></li>
-            <li><a href="catalog.html">Гостиницы</a></li>
+            <li><a class="navigation-link" href="info.html">Информация</a></li>
+            <li><a class="navigation-link" href="card.html">Фото и видео</a></li>
+            <li><a class="navigation-link" href="map.html">Карта штата</a></li>
+            <li><a class="navigation-link" href="catalog.html">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
