--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <section class="booking">
           <div class="booking-text">
             <h2>Заинтересовались?</h2>
-            <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+            <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
           </div>
           <a class ="booking-search" href="#">Поиск гостиницы в Седоне</a>
         </section>
