--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
         <section class="advantages">
           <div class="advantages-intro">
-            <h1>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h1>
+            <h1>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
             <p class="cause">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </div>
           <h2 class="visually-hidden">Преимущества Седоны</h2>
@@ -106,15 +106,15 @@
             <div class="popup-item-count">
               <div class="popup-item-count-adult">
                 <label class="input-popup-label" for="adult">Взрослые:</label>
-                <button class="minus"><span class="visually-hidden">Минус один взрослый</span></button>
+                <button class="minus" type="button"><span class="visually-hidden">Минус один взрослый</span></button>
                 <input class="input-popup-adult" type="text" name="adult" id="adult" value="2">
-                <button class="plus"><span class="visually-hidden">Плюс один взрослый</span></button>
+                <button class="plus" type="button"><span class="visually-hidden">Плюс один взрослый</span></button>
               </div>
               <div class="popup-item-count-child">
                 <label class="input-popup-label" for="child">Дети:</label>
-                <button class="minus"><span class="visually-hidden">Минус один ребёнок</span></button>
+                <button class="minus" type="button"><span class="visually-hidden">Минус один ребёнок</span></button>
                 <input class="input-popup-child" type="text" name="child" id="child" value="0">
-                <button class="plus"><span class="visually-hidden">Плюс один ребёнок</span></button>
+                <button class="plus" type="button"><span class="visually-hidden">Плюс один ребёнок</span></button>
               </div>
             </div>
             <button type="submit" class="popup-search">Найти</button>
