--- a/catalog.html
+++ b/catalog.html
@@ -55,17 +55,24 @@
                 <label class="input-checkbox-label filter-check-on" for="apartament">Апартаменты</label>
               </p>
             </fieldset>
-            <fieldset class="filter-field filter-field-price">
+            <fieldset class="filter-field filter-field-range">
               <legend class="filter-list">Стоимость в сутки (Р)</legend>
               <p class="filter-text">
                 <div class="price-controls">
-                  <label class="input-price-label" for="price-min">От</label>
-                  <input class="input-price" type="text" name="price" id="price-min" value="0">
-                  <label class="input-price-label" for="price-max">До</label>
-                  <input class="input-price" type="text" name="price" id="price-max" value="3000">
-              </div>
-                <button class="button-range"><span class="visually-hidden">Минимальная цена</span></button>
-                <button class="button-range"><span class="visually-hidden">Максимальная цена</span></button>
+                  <label class="input-price-label" for="price-min">От
+                    <input class="input-price" type="text" name="price" id="price-min" value="0">
+                  </label>
+                  <label class="input-price-label" for="price-max">До
+                    <input class="input-price" type="text" name="price" id="price-max" value="3000">
+                  </label>
+                </div>
+                <div class="range-controls">
+                  <div class="scale">
+                      <div class="bar"></div>
+                    <button class="button-range button-range-min"><span class="visually-hidden">Минимальная цена</span></button>
+                    <button class="button-range button-range-max"><span class="visually-hidden">Максимальная цена</span></button>
+                  </div>
+                </div>
                 <input class="filter-display" type="submit" value="Показать">
               </p>
             </fieldset>
@@ -73,61 +80,141 @@
         </section>
         <div class="hotels-sort">
           <span class="number">Найдено: 3</span>
-          <span class="sorting-filter">Сортировка:</span>
-          <a class="sorting-item sorting-item-current" href="#">По цене</a>
-          <a class="sorting-item" href="#">По типу</a>
-          <a class="sorting-item" href="#">По рейтингу</a>
+          <div>
+            <span class="sorting-filter">Сортировка:</span>
+            <a class="sorting-item sorting-item-current" href="#">По цене</a>
+            <a class="sorting-item" href="#">По типу</a>
+            <a class="sorting-item" href="#">По рейтингу</a>
+          </div>
           <div class="updown">
-            <a class="sorting-up" href="#"><span class="visually-hidden">По возрастанию</span></a>
-            <a class="sorting-down" href="#"><span class="visually-hidden">По убыванию</span></a>
+            <a class="sorting-up" href="#"><span class="visually-hidden">По возрастанию</span>
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+              <polygon fill="#231F20" points="5.5,0 0,10 11,10 "/>
+           </svg>
+           </a>
+            <a class="sorting-down" href="#"><span class="visually-hidden">По убыванию</span>
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
+              <polyline fill="#231F20" points="5.5,10 0,0 11,0 "/>
+           </svg>
+           </a>
           </div>
         </div>
-        <section class="hotels-list">
-          <ul class="hotels-item">
-            <li>
-              <h3><a class="hotel-name" href="#">Amara Resort & Spa</a></h3>
+        <section class="hotels-option">
+          <ul class="hotels-list">
+            <li class="hotels-item">
               <div class="hotels-img">
                 <img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa">
               </div>
-              <span class="hotel-type">Гостиница</span>
-              <span class="hotel-price">от 4000 р.</span>
-              <a class="hotel-detail" href="#">Подробнее</a>
-              <a class="hotel-booking" href="#">Забронировать</a>
+              <div class="hotel-info">
+                <h3 class="hotel-name">
+                  <a class="hotel-name-link" href="#">Amara Resort & Spa</a>
+                </h3>
+                <div class="extra">
+                  <span class="hotel-type">Гостиница</span>
+                  <span class="hotel-price">от 4000 р.</span>
+                </div>
+                <div class="info-link">
+                  <a class="hotel-detail" href="#">Подробнее</a>
+                  <a class="hotel-booking" href="#">Забронировать</a>
+                </div>
+              </div>
               <div class="reviews">
-                <div class="stars"></div>
+                <div class="stars stars-four">
+                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                     0,6.494 6.878,6.494 "/>
+                    </svg>
+                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                     0,6.494 6.878,6.494 "/>
+                    </svg>
+                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                     0,6.494 6.878,6.494 "/>
+                    </svg>
+                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                     0,6.494 6.878,6.494 "/>
+                    </svg>
+                </div>
                 <span class="rating-item">Рейтинг: 8,5</span>
               </div>
             </li>
-            <li>
-              <h3><a class="hotel-name" href="#">Desert Quail Inn</a></h3>
+            <li class="hotels-item">
               <div class="hotels-img">
                 <img src="img/desert.jpg" width="135" height="90" alt="Desert Quail Inn">
               </div>
-              <span class="hotel-type">Мотель</span>
-              <span class="hotel-price">от 3000 р.</span>
-              <a class="hotel-detail" href="#">Подробнее</a>
-              <a class="hotel-booking" href="#">Забронировать</a>
-              <div class="reviews">
-                <div class="stars"></div>
-                <div class="rating">
-                  <span class="rating-item">Рейтинг: 8,9</span>
+              <div class="hotel-info">
+                <h3 class="hotel-name">
+                  <a class="hotel-name-link" href="#">Desert Quail Inn</a>
+                </h3>
+                <div class="extra">
+                  <span class="hotel-type">Мотель</span>
+                  <span class="hotel-price">от 3000 р.</span>
+                </div>
+                <div class="info-link">
+                  <a class="hotel-detail" href="#">Подробнее</a>
+                  <a class="hotel-booking" href="#">Забронировать</a>
                 </div>
               </div>
+                <div class="reviews">
+                  <div class="stars stars-three">
+                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                    0,6.494 6.878,6.494 "/>
+                    </svg>
+                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                     0,6.494 6.878,6.494 "/>
+                    </svg>
+                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                    0,6.494 6.878,6.494 "/>
+                  </div>
+                  <span class="rating-item">Рейтинг: 8,9</span>
+                </div>
             </li>
-            <li>
-              <h3><a class="hotel-name" href="#">Villas at Poco Diablo</a></h3>
+            <li class="hotels-item">
               <div class="hotels-img">
                 <img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
               </div>
-              <span class="hotel-type">Апартаменты</span>
-              <span class="hotel-price">от 2000 р.</span>
-              <a class="hotel-detail" href="#">Подробнее</a>
-              <a class="hotel-booking" href="#">Забронировать</a>
-              <div class="reviews">
-                <div class="stars"></div>
-                <div class="rating">
-                  <span class="rating-item">Рейтинг: 9,2</span>
+              <div class="hotel-info">
+                <h3 class="hotel-name">
+                  <a class="hotel-name-link" href="#">Villas at Poco Diablo</a>
+                </h3>
+                <div class="extra">
+                  <span class="hotel-type">Апартаменты</span>
+                  <span class="hotel-price">от 2000 р.</span>
                 </div>
+                <div class="info-link">
+                  <a class="hotel-detail" href="#">Подробнее</a>
+                  <a class="hotel-booking" href="#">Забронировать</a>
+                </div>
+              </div>
+              <div class="reviews">
+                <div class="stars stars-two">
+                  <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                  <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                   0,6.494 6.878,6.494 "/>
+                  </svg>
+                  <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
+                  <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
+                   0,6.494 6.878,6.494 "/>
+                  </svg>
+                  </svg>
+                </div>
+                <span class="rating-item">Рейтинг: 9,2</span>
               </div>
             </li>
           </ul>
