--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
             </fieldset>
             <fieldset class="filter-field filter-field-range">
               <legend class="filter-list">Стоимость в сутки (Р)</legend>
-              <p class="filter-text">
+              <div class="filter-text">
                 <div class="price-controls">
                   <label class="input-price-label" for="price-min">От
                     <input class="input-price" type="text" name="price" id="price-min" value="0">
@@ -68,36 +68,38 @@
                 </div>
                 <div class="range-controls">
                   <div class="scale">
-                      <div class="bar"></div>
-                    <button class="button-range button-range-min"><span class="visually-hidden">Минимальная цена</span></button>
-                    <button class="button-range button-range-max"><span class="visually-hidden">Максимальная цена</span></button>
+                    <div class="bar"></div>
+                    <button class="button-range button-range-min" type="button"><span class="visually-hidden">Минимальная цена</span></button>
+                    <button class="button-range button-range-max" type="button"><span class="visually-hidden">Максимальная цена</span></button>
                   </div>
                 </div>
                 <input class="filter-display" type="submit" value="Показать">
-              </p>
+              </div>
             </fieldset>
           </form>
         </section>
         <div class="hotels-sort">
           <span class="number">Найдено: 3</span>
-          <div>
+          <div class="sorting-list">
             <span class="sorting-filter">Сортировка:</span>
             <a class="sorting-item sorting-item-current" href="#">По цене</a>
             <a class="sorting-item" href="#">По типу</a>
             <a class="sorting-item" href="#">По рейтингу</a>
           </div>
           <div class="updown">
-            <a class="sorting-up" href="#"><span class="visually-hidden">По возрастанию</span>
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <a class="sorting-up" href="#">
+              <svg class="sorting-up-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
-              <polygon fill="#231F20" points="5.5,0 0,10 11,10 "/>
-           </svg>
+              <polygon points="5.5,0 0,10 11,10 "/>
+              </svg>
+              <span class="visually-hidden">По возрастанию</span>
            </a>
-            <a class="sorting-down" href="#"><span class="visually-hidden">По убыванию</span>
+            <a class="sorting-down" href="#">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
-              <polyline fill="#231F20" points="5.5,10 0,0 11,0 "/>
-           </svg>
+             <polyline fill="#81b3d2" points="5.5,10 0,0 11,0 "/>
+             </svg>
+              <span class="visually-hidden">По убыванию</span>
            </a>
           </div>
         </div>
@@ -122,26 +124,6 @@
               </div>
               <div class="reviews">
                 <div class="stars stars-four">
-                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                     0,6.494 6.878,6.494 "/>
-                    </svg>
-                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                     0,6.494 6.878,6.494 "/>
-                    </svg>
-                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                     0,6.494 6.878,6.494 "/>
-                    </svg>
-                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                     0,6.494 6.878,6.494 "/>
-                    </svg>
                 </div>
                 <span class="rating-item">Рейтинг: 8,5</span>
               </div>
@@ -165,20 +147,6 @@
               </div>
                 <div class="reviews">
                   <div class="stars stars-three">
-                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                    0,6.494 6.878,6.494 "/>
-                    </svg>
-                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                     0,6.494 6.878,6.494 "/>
-                    </svg>
-                    <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                    <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                    0,6.494 6.878,6.494 "/>
                   </div>
                   <span class="rating-item">Рейтинг: 8,9</span>
                 </div>
@@ -202,17 +170,6 @@
               </div>
               <div class="reviews">
                 <div class="stars stars-two">
-                  <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                  width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                  <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                   0,6.494 6.878,6.494 "/>
-                  </svg>
-                  <svg class="star-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                  width="18px" height="17px" viewBox="0 0 18 17" enable-background="new 0 0 18 17" xml:space="preserve">
-                  <polygon fill="#81B3D2" points="9.002,0 11.128,6.494 18.005,6.494 12.441,10.506 14.566,17 9.002,12.987 3.438,17 5.564,10.506
-                   0,6.494 6.878,6.494 "/>
-                  </svg>
-                  </svg>
                 </div>
                 <span class="rating-item">Рейтинг: 9,2</span>
               </div>
